syntax = "proto3";

package auth.users;

service AuthUsersService {
    rpc generateTokenPair (GenerateTokenPairRequest) returns (GenerateTokenPairResponse);
}

enum TokenType {
    Normal = 0;
    ActivateUser = 1;
}

message GenerateTokenPairRequest {
    string userId = 1;
    string userAgentId = 2;
    int32 accessTokenLifetime = 3;
    TokenType tokenType = 4;
    optional int32 refreshTokenLifetime = 5;
}

message GenerateTokenPairResponse {
    string accessToken = 1;
    string refreshToken = 2;
}